correccion de conexion a css

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clase #10</title>
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="./index.css">
     <script src="https://kit.fontawesome.com/a6187c46cf.js" crossorigin="anonymous"></script>
 </head>
 
